Full Admin Giao diện + Chức năng hoạt động ổn

--- a/TechWorld/appsettings.json
+++ b/TechWorld/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-4NGR77A8\\DAT; Database=ShopDienTu1;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
