Bổ sung thông tin Rank khách hàng

--- a/TechWorld/appsettings.json
+++ b/TechWorld/appsettings.json
@@ -8,5 +8,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailSettings": {
+    "SenderName": "TechWorld",
+    "SenderEmail": "letandatk16@siu.edu.vn",
+    "Password": "ouyg otxd gdxs ilvy",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587
+  },
+  "AISettings": {
+    "ApiUrl": "https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent",
+    "ApiKey": "AIzaSyAK-44FAiFzsYuYH4A9ELg1q2ZJxh5C_qM"
+  },
+  "BankInfo": {
+    "BankId": "970436", // BIN Code của MB BANK
+    "AccountNumber": "9937833154",
+    "AccountName": "Le Tan Dat",
+    "BankName": "Ngân hàng TMCP Ngoại Thương (VIETCOMBANK)"
+  },
   "AllowedHosts": "*"
 }
+
